--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
   "require": {
     "yiisoft/yii2": "~2.0.0"
   },
+  "extra": {
+    "bootstrap": "lawsaw\\Bootstrap"
+  },
   "autoload": {
     "psr-4": {
       "lawsaw\\": "src"
