--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,14 @@
     }
   ],
   "require": {
-    "yiisoft/yii2": "~2.0.0"
+    "yiisoft/yii2": "~2.0.0",
+    "omgdef/yii2-multilingual-behavior": "^2.1",
+    "kartik-v/yii2-widget-select2": "@dev",
+    "kartik-v/yii2-widget-fileinput": "1.0",
+    "kartik-v/yii2-widget-datetimepicker": "*",
+    "yiisoft/yii2-imagine": "*",
+    "spatie/pdf-to-image": "^1.2",
+    "true/punycode": "~2.0",
   },
   "extra": {
     "bootstrap": "lawsaw\\Bootstrap"
