--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "kartik-v/yii2-widget-datetimepicker": "*",
     "yiisoft/yii2-imagine": "*",
     "spatie/pdf-to-image": "^1.2",
-    "true/punycode": "~2.0",
+    "true/punycode": "~2.0"
   },
   "extra": {
     "bootstrap": "lawsaw\\Bootstrap"
