--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,11 @@
     "spatie/pdf-to-image": "^1.2",
     "true/punycode": "~2.0"
   },
+  "require-dev": {
+    "yiisoft/yii2-codeception": "*",
+    "codeception/codeception": "*",
+    "codeception/specify": "*"
+  },
   "extra": {
     "bootstrap": "lawsaw\\Bootstrap"
   },
