--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     "kartik-v/yii2-widget-datetimepicker": "*",
     "yiisoft/yii2-imagine": "*",
     "spatie/pdf-to-image": "^1.2",
-    "true/punycode": "~2.0"
+    "true/punycode": "~2.0",
+    "2amigos/yii2-tinymce-widget" : "~1.1",
+    "2amigos/yii2-date-picker-widget" : "~1.0",
   },
   "require-dev": {
     "yiisoft/yii2-codeception": "*",
