--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "spatie/pdf-to-image": "^1.2",
     "true/punycode": "~2.0",
     "2amigos/yii2-tinymce-widget" : "~1.1",
-    "2amigos/yii2-date-picker-widget" : "~1.0",
+    "2amigos/yii2-date-picker-widget" : "~1.0"
   },
   "require-dev": {
     "yiisoft/yii2-codeception": "*",
